--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,4 +1,5 @@
-/* RESET DURO */
+@import url('https://fonts.googleapis.com/css2?family=Teko:wght@300..700&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -10,8 +11,8 @@ html, body {
 }
 
 body {
-  line-height: 1.5;
-  font-family: system-ui, sans-serif;
+  line-height: 1.6;  /* CAMBIADO de 0.5 a 1.6 */
+  font-family: 'Teko', sans-serif;
 }
 
 ul, ol {
