--- a/Frontend/src/Pages/Home.css
+++ b/Frontend/src/Pages/Home.css
@@ -101,6 +101,16 @@
   line-height: 1.4;
 }
 
+.chip:hover{
+  background-color: rgba(23, 19, 15, 0.918);
+}
+
+.chip.active {
+  background-color: rgba(23, 19, 15, 0.918);
+  color: white;
+  border-color: var(--primary);
+}
+
 /* Títulos específicos */
 h1 {
   line-height: 1.2;
@@ -267,6 +277,33 @@ p {
   width: 100%;
   background: var(--bg-primary);  /* Fondo oscuro */
 }
+
+.price {
+  font-weight: 700;
+  font-size: 16px;
+  color: var(--accent-orange-dark);
+  margin: 8px 0 4px;
+}
+
+.card-image {
+  width: 100%;
+  height: 180px;
+  overflow: hidden;
+  border-radius: 16px 16px 0 0;
+}
+
+.card-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.description {
+  font-size: 16px;
+  color: var(--text-muted);
+  margin-bottom: 10px;
+}
+
 
 .section-header {
   margin-bottom: 48px;
